--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  background: url('./img/background.jpg') no-repeat;
+  background-size: cover;
+  min-height: 100dvh;
+  background-position: center;
+}
+
+.sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: 100%;
+  background: transparent;
+  backdrop-filter: blur(40px);
+  border-right: 2px solid rgba(255, 255, 255, .2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+  padding: 6px 14px;
+  transition: .5s;
+}
+.sidebar-active{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 260px;
+  height: 100%;
+  background: transparent;
+  backdrop-filter: blur(40px);
+  border-right: 2px solid rgba(255, 255, 255, .2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+  padding: 6px 14px;
+  transition: .5s;
+}
+.sidebar-active ul{
+  list-style: none;
+}
+.logo-menu{
+  display: flex;
+  width: 100%;
+  height: 70px;
+  align-items: center;
+}
+.logo-menu .logo{
+  padding-left: .4rem;
+  color: #fff;
+  pointer-events: none;
+  opacity: 0;
+  font-size: 2.5rem;
+  transition: .3s;
+}
+.sidebar-active .logo-menu .logo{
+  opacity: 1;
+  transition: .3s;
+}
+.logo-menu .toggle-btn{
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  font-size: 1.3rem;
+  cursor: pointer;
+  text-align: center;
+  position: absolute;
+  line-height: 40px;
+  left: 50%;
+  transition: .3s;
+  transform: translate(-50%);
+}
+.sidebar-active .logo-menu .toggle-btn{
+  left: 90%;
+  transition: .3s;
+}
+.sidebar .lists{
+  list-style: none;
+}
+.lists .list-menu{
+  text-decoration: none;
+  width: 100%;
+  height: 50px;
+  margin-top: .8rem;
+  line-height: 50px;
+}
+.lists .list-menu.active a,
+.lists .list-menu a:hover{
+  background-color: rgba(255, 255, 255, .2);
+}
+.list-menu a{
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  border-radius: .4rem;
+  white-space: nowrap;
+  color: #fff;
+  transition: .5s;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.list-menu a i{
+  min-width: 50px;
+  height: 50px;
+  line-height: 50px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar .lists span{
+  opacity: 0;
+  transition: opacity .3s;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar-active .lists span{
+  opacity: 1;
+  pointer-events: auto;
+  transition: opacity .4s;
 }
